correction contrast

--- a/assets/style.css
+++ b/assets/style.css
@@ -102,7 +102,7 @@ body {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #928b46;
+  background-color: #4b4724;
   border-radius: 0;
 }
 .nav-pills .nav-link {
